# sticky-pi-device

./: .gitignore  README.md
hardware/: .~lock.BOM.csv#  BOM.csv  README.md  main.fzz
hardware/CAD/: cambox_back.stl  cambox_tube.stl  cambox_visor.stl  card_drawer.stl  card_drawer_transparent.gcode  dht_shell.stl  drawer_hook.stl  lightbox_lid.stl  lightbox_lid_transparent.gcode  pi_sledge.stl  pi_standoff.stl
hardware/main_gerber/: main_contour.gm1  main_copperBottom.gbl  main_copperTop.gtl  main_drill.txt  main_maskBottom.gbs  main_maskTop.gts  main_pnp.txt  main_silkBottom.gbo  main_silkTop.gto
hardware/sticky_pi_hat/: fp-lib-table  logo.kicad_mod  pcbway_BOM.xls  sticky_pi_hat-cache.lib  sticky_pi_hat.kicad_pcb  sticky_pi_hat.kicad_pcb-bak  sticky_pi_hat.kicad_prl  sticky_pi_hat.kicad_pro  sticky_pi_hat.kicad_sch  sticky_pi_hat.pro  sticky_pi_hat.sch  sticky_pi_hat.sch-bak  sym-lib-table
software/: .env  Makefile  README.md  burn_image.sh  read_onlyfy.sh  sync_to_pendrive.py
software/legacy/: burn_image.sh  camera_tuning.py  dt-blob.dts  make_os_image.sh  read_onlyfy.sh  take_picture.py
software/prototypes/: SyncServer.java  SyncServer.sh  client.py  mock_server.py  parse_wifi_qrcode.sh  simpler_http.py  sync_server.py  wifi_direct.py  zeroconf_browser.py
software/src/: setup.py
software/take_picture/: CMakeLists.txt  DHT22.c  DHT22.h  MCP3001  RaspiCamControl.c  RaspiCamControl.h  RaspiCommonSettings.c  RaspiCommonSettings.h  RaspiHelpers.c  RaspiHelpers.h  RaspiPreview.c  RaspiPreview.h  RaspiStill.c  build.sh  take_picture.c
(+70 files in other folders)
